# arrow-message

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: check_cargo.yml  check_uv.yml  release_cargo.yml  release_pypi.yml
crates/arrow-message/: Cargo.toml
crates/arrow-message-derive/: Cargo.toml
crates/arrow-message-derive/src/: lib.rs
crates/arrow-message-python/: Cargo.toml  pyproject.toml
crates/arrow-message-python/python/pyarrow_message/: __init__.py
crates/arrow-message/examples/: complex.rs  derive.rs  enum_derive.rs  enum_impl.rs  flattening.rs  impl.rs
crates/arrow-message/src/: helper.rs  lib.rs  traits.rs
crates/arrow-message/src/traits/: flattening.rs
