[package]
name = "arrow-message-derive"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.version = "1.0.94"
quote.version = "1.0.40"
syn.version = "2.0.100"
