[package]
name = "arrow-message"
version.workspace = true
description.workspace = true
edition.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arrow.workspace = true
miette.workspace = true
thiserror.workspace = true

arrow-message-derive.workspace = true
